Doc/force-app/main/default/objects/Account/fields/Case_Matter_Management__c.field-meta.xml
<CustomField>
    <fullName>Case_Matter_Management__c</fullName>
    <description>Case and/or matter management system(s) used by the firm.</description>
    <inlineHelpText>Case and/or matter management system the account uses</inlineHelpText>
    <label>Case/Matter Management</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Bware Legal</fullName>
            </value>
            <value>
                <fullName>Caseroom</fullName>
            </value>
            <value>
                <fullName>CaseWare</fullName>
            </value>
            <value>
                <fullName>Client Profiles</fullName>
            </value>
            <value>
                <fullName>Cognito Custodiens</fullName>
            </value>
            <value>
                <fullName>Custom</fullName>
            </value>
            <value>
                <fullName>Eclipse</fullName>
            </value>
            <value>
                <fullName>FloSuite</fullName>
            </value>
            <value>
                <fullName>FWBS Matter Centre</fullName>
            </value>
            <value>
                <fullName>i-many</fullName>
            </value>
            <value>
                <fullName>IRIS Group</fullName>
            </value>
            <value>
                <fullName>Isokon Probate</fullName>
            </value>
            <value>
                <fullName>Keyhouse</fullName>
            </value>
            <value>
                <fullName>LawBase</fullName>
            </value>
            <value>
                <fullName>LexisNexis Axxia</fullName>
            </value>
            <value>
                <fullName>LexisNexis Visualfiles</fullName>
            </value>
            <value>
                <fullName>Linetime</fullName>
            </value>
            <value>
                <fullName>Litigators Notebook</fullName>
            </value>
            <value>
                <fullName>Metastorm BPM</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Norwel</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>PCLaw</fullName>
            </value>
            <value>
                <fullName>Peppermint Technology</fullName>
            </value>
            <value>
                <fullName>Perfect Practice</fullName>
            </value>
            <value>
                <fullName>Pilgrim Lawsoft</fullName>
            </value>
            <value>
                <fullName>ProLaw</fullName>
            </value>
            <value>
                <fullName>Ringtail CaseBook</fullName>
            </value>
            <value>
                <fullName>Tikit P4W</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>