Doc/force-app/main/default/objects/Account/fields/cc_T_CSM_WB__c.field-meta.xml
<CustomField>
    <fullName>cc_T_CSM_WB__c</fullName>
    <defaultValue>false</defaultValue>
    <label>cc T-CSM</label>
    <type>Checkbox</type>
</CustomField>