Doc/force-app/main/default/objects/Account/fields/Certified_Intapp_Open_Resources__c.field-meta.xml
<CustomField>
    <fullName>Certified_Intapp_Open_Resources__c</fullName>
    <label>Certified Intapp Open Resources</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>