Doc/force-app/main/default/objects/Account/fields/CFO_Awareness__c.field-meta.xml
<CustomField>
    <fullName>CFO_Awareness__c</fullName>
    <formula>CASE ( Heat_Mapping_Finance__c, &quot;1&quot;, 1, &quot;2&quot;, 2, &quot;3&quot;, 3, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CFO Awareness</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>