Doc/force-app/main/default/objects/Account/fields/CG_Protect__c.field-meta.xml
<CustomField>
    <fullName>CG_Protect__c</fullName>
    <inlineHelpText>Does this customer own CG Protect?</inlineHelpText>
    <label>CG Protect</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Suspect</fullName>
            </value>
            <value>
                <fullName>Prospect</fullName>
            </value>
            <value>
                <fullName>Own it</fullName>
            </value>
            <value>
                <fullName>Lapsed</fullName>
            </value>
            <value>
                <fullName>Own it - Trial</fullName>
            </value>
            <value>
                <fullName>Converted to Intapp Product</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>