Doc/force-app/main/default/objects/Account/fields/Clients__c.field-meta.xml
<CustomField>
    <fullName>Clients__c</fullName>
    <description>Known Clients of Firm</description>
    <label>Clients</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Bank of America</fullName>
            </value>
            <value>
                <fullName>DuPont</fullName>
            </value>
            <value>
                <fullName>Wal-Mart</fullName>
            </value>
            <value>
                <fullName>GE</fullName>
            </value>
            <value>
                <fullName>JPM</fullName>
            </value>
            <value>
                <fullName>Microsoft</fullName>
            </value>
            <value>
                <fullName>Wells Fargo</fullName>
            </value>
            <value>
                <fullName>Citi</fullName>
            </value>
            <value>
                <fullName>Goldman Sachs</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>