Doc/force-app/main/default/objects/Account/fields/Cloud_Addendum__c.field-meta.xml
<CustomField>
    <fullName>Cloud_Addendum__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Master Terms: Cloud Addendum</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>Accounts (Cloud Addendum)</relationshipLabel>
    <relationshipName>Accounts1</relationshipName>
    <type>Lookup</type>
</CustomField>