Doc/force-app/main/default/objects/Account/fields/Cloud_posture__c.field-meta.xml
<CustomField>
    <fullName>Cloud_posture__c</fullName>
    <inlineHelpText>Are they open to/will they migrate to cloud-based products?</inlineHelpText>
    <label>Cloud posture</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>