Doc/force-app/main/default/objects/Account/fields/Co_marketing_Agreement__c.field-meta.xml
<CustomField>
    <fullName>Co_marketing_Agreement__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Do we have a co-marketing agreement with this account?</inlineHelpText>
    <label>Co-marketing Agreement</label>
    <type>Checkbox</type>
</CustomField>