Doc/force-app/main/default/objects/Account/fields/Collaboration_Level__c.field-meta.xml
<CustomField>
    <fullName>Collaboration_Level__c</fullName>
    <label>Collaboration Level</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Not Client-Facing</fullName>
            </value>
            <value>
                <fullName>Reasonable, but Require Coaching</fullName>
            </value>
            <value>
                <fullName>Participation Results in Deal Wins</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>