Doc/force-app/main/default/objects/Account/fields/Compliance_Reference__c.field-meta.xml
<CustomField>
    <fullName>Compliance_Reference__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Compliance Reference</label>
    <type>Checkbox</type>
</CustomField>