Doc/force-app/main/default/objects/Account/fields/Conflicts__c.field-meta.xml
<CustomField>
    <fullName>Conflicts__c</fullName>
    <description>For people to designate which conflicts system is in use at the account.</description>
    <inlineHelpText>What is the conflicts product that the customer is currently using?</inlineHelpText>
    <label>Conflicts</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Accutrac</fullName>
            </value>
            <value>
                <fullName>ADERANT</fullName>
            </value>
            <value>
                <fullName>Affinity</fullName>
            </value>
            <value>
                <fullName>Autonomy Conflicts Manager / iManage</fullName>
            </value>
            <value>
                <fullName>Client Profiles</fullName>
            </value>
            <value>
                <fullName>CMS Conflicts</fullName>
            </value>
            <value>
                <fullName>Compliguard Conflicts</fullName>
            </value>
            <value>
                <fullName>Custom</fullName>
            </value>
            <value>
                <fullName>DB/Text</fullName>
            </value>
            <value>
                <fullName>Elegrity</fullName>
            </value>
            <value>
                <fullName>Elite Conflicts</fullName>
            </value>
            <value>
                <fullName>Fasttrack</fullName>
            </value>
            <value>
                <fullName>Inmagic</fullName>
            </value>
            <value>
                <fullName>Intapp Open - Conflicts</fullName>
            </value>
            <value>
                <fullName>LawMaster</fullName>
            </value>
            <value>
                <fullName>LegalKEY Conflicts</fullName>
            </value>
            <value>
                <fullName>Lexis One</fullName>
            </value>
            <value>
                <fullName>LMS / Rippe Kingston</fullName>
            </value>
            <value>
                <fullName>Manual</fullName>
            </value>
            <value>
                <fullName>MDY Conflicts</fullName>
            </value>
            <value>
                <fullName>Microsoft Dynamics</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Open Practice</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Peppermint Technology</fullName>
            </value>
            <value>
                <fullName>ProLaw Conflicts</fullName>
            </value>
            <value>
                <fullName>Sharepoint</fullName>
            </value>
            <value>
                <fullName>W Ventures</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>