Doc/force-app/main/default/objects/Account/fields/Conflicts_Prospect_New__c.field-meta.xml
<CustomField>
    <fullName>Conflicts_Prospect_New__c</fullName>
    <label>Conflicts Prospect New</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Customer (Conflicts - Cloud)</fullName>
            </value>
            <value>
                <fullName>Customer (Conflicts - Cloud): Engaged in Upsell</fullName>
            </value>
            <value>
                <fullName>Customer (Conflicts - Cloud): Unengaged in Upsell</fullName>
            </value>
            <value>
                <fullName>Customer (Conflicts)</fullName>
            </value>
            <value>
                <fullName>Customer (Conflicts): Engaged in Upsell</fullName>
            </value>
            <value>
                <fullName>Customer (Conflicts): Unengaged in Upsell</fullName>
            </value>
            <value>
                <fullName>Customer (Analyze): Engaged in Upsell</fullName>
            </value>
            <value>
                <fullName>Customer (Analyze): Unengaged in Upsell</fullName>
            </value>
            <value>
                <fullName>Customer (LegalKEY - Conflicts): Engaged in Upsell</fullName>
            </value>
            <value>
                <fullName>Customer (LegalKEY - Conflicts): Unengaged in Upsell</fullName>
            </value>
            <value>
                <fullName>Engaged Customer</fullName>
            </value>
            <value>
                <fullName>Engaged Non-Customer</fullName>
            </value>
            <value>
                <fullName>Unengaged Customer</fullName>
            </value>
            <value>
                <fullName>Unengaged Non-Customer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>