Doc/force-app/main/default/objects/Account/fields/Conflicts_Software_Previous__c.field-meta.xml
<CustomField>
    <fullName>Conflicts_Software_Previous__c</fullName>
    <description>Previous Conflicts software prior to selecting Intapp Open: Conflicts</description>
    <inlineHelpText>What conflicts platform did the customer use prior to purchasing Conflicts?</inlineHelpText>
    <label>Conflicts Software - Previous</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Accutrac</fullName>
            </value>
            <value>
                <fullName>ADERANT</fullName>
            </value>
            <value>
                <fullName>Autonomy Conflicts Manager / iManage</fullName>
            </value>
            <value>
                <fullName>Client Profiles</fullName>
            </value>
            <value>
                <fullName>CMS Conflicts</fullName>
            </value>
            <value>
                <fullName>Compliguard Conflicts</fullName>
            </value>
            <value>
                <fullName>Custom</fullName>
            </value>
            <value>
                <fullName>Elite 3E Conflicts</fullName>
            </value>
            <value>
                <fullName>Elite Conflicts</fullName>
            </value>
            <value>
                <fullName>Fasttrack</fullName>
            </value>
            <value>
                <fullName>Inmagic</fullName>
            </value>
            <value>
                <fullName>Intapp Conflicts</fullName>
            </value>
            <value>
                <fullName>IPManager</fullName>
            </value>
            <value>
                <fullName>LegalKEY Conflicts</fullName>
            </value>
            <value>
                <fullName>LMS / Rippe Kingston</fullName>
            </value>
            <value>
                <fullName>MDY Conflicts</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Sharepoint</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>