Doc/force-app/main/default/objects/Account/fields/Consultants_Working_With_Firm__c.field-meta.xml
<CustomField>
    <fullName>Consultants_Working_With_Firm__c</fullName>
    <label>Consultants Working With Firm</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Advanced Legal Systems</fullName>
            </value>
            <value>
                <fullName>Askew Network Solutions</fullName>
            </value>
            <value>
                <fullName>Baker Robbins &amp; Company</fullName>
            </value>
            <value>
                <fullName>Kraft, Kennedy &amp; Lesser</fullName>
            </value>
            <value>
                <fullName>Mineshift</fullName>
            </value>
            <value>
                <fullName>Onward Technologies</fullName>
            </value>
            <value>
                <fullName>Parker and Houser Consulting LLC</fullName>
            </value>
            <value>
                <fullName>PLA</fullName>
            </value>
            <value>
                <fullName>Potomac Consulting</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>