Doc/force-app/main/default/objects/Account/fields/Consulting_Contact__c.field-meta.xml
<CustomField>
    <fullName>Consulting_Contact__c</fullName>
    <label>Consulting Contact</label>
    <length>50</length>
    <type>Text</type>
</CustomField>