Doc/force-app/main/default/objects/Account/fields/Contacts_APRL_Members__c.field-meta.xml
<CustomField>
    <fullName>Contacts_APRL_Members__c</fullName>
    <description>How many Contacts on this Account have a Firm Role that identifies them as APRL Members?</description>
    <inlineHelpText>How many Contacts on this Account have a Firm Role that identifies them as APRL Members?</inlineHelpText>
    <label>Contacts - APRL Members</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>