Doc/force-app/main/default/objects/Account/fields/Contacts_Business_Development_Leaders__c.field-meta.xml
<CustomField>
    <fullName>Contacts_Business_Development_Leaders__c</fullName>
    <description>How many Contacts on this Account have a Firm Role that identifies them as Business Development Leaders?</description>
    <inlineHelpText>How many Contacts on this Account have a Firm Role that identifies them as Business Development Leaders?</inlineHelpText>
    <label>Contacts-Business Dev Leaders</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>