Doc/force-app/main/default/objects/Account/fields/Contacts_Conflicts__c.field-meta.xml
<CustomField>
    <fullName>Contacts_Conflicts__c</fullName>
    <description>How many Contacts on this Account have a Firm Role that identifies them as Conflicts people?</description>
    <inlineHelpText>How many Contacts on this Account have a Firm Role that identifies them as Conflicts people?</inlineHelpText>
    <label>Contacts - Conflicts</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>