Doc/force-app/main/default/objects/Account/fields/Contacts_Firm_Management__c.field-meta.xml
<CustomField>
    <fullName>Contacts_Firm_Management__c</fullName>
    <description>How many Contacts on this Account have a Firm Role that identifies them as Firm Management?</description>
    <inlineHelpText>How many Contacts on this Account have a Firm Role that identifies them as Firm Management?</inlineHelpText>
    <label>Contacts - Firm Management</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>