Doc/force-app/main/default/objects/Account/fields/Contacts_Intake__c.field-meta.xml
<CustomField>
    <fullName>Contacts_Intake__c</fullName>
    <label>Contacts - Intake Leader</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>