Doc/force-app/main/default/objects/Account/fields/Contacts_Integration_Leader__c.field-meta.xml
<CustomField>
    <fullName>Contacts_Integration_Leader__c</fullName>
    <description>Number of Integration Leaders at a Firm</description>
    <inlineHelpText>Number of Integration Leaders at a Firm</inlineHelpText>
    <label>Contacts - Integration Leader</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>