Doc/force-app/main/default/objects/Account/fields/Contacts_IT_Staff__c.field-meta.xml
<CustomField>
    <fullName>Contacts_IT_Staff__c</fullName>
    <description>How many Contacts on this Account have a Firm Role that identifies them as IT Staff?</description>
    <inlineHelpText>How many Contacts on this Account have a Firm Role that identifies them as IT Staff?</inlineHelpText>
    <label>Contacts - IT Staff</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>