Doc/force-app/main/default/objects/Account/fields/Contacts_PGL_Capital_Markets__c.field-meta.xml
<CustomField>
    <fullName>Contacts_PGL_Capital_Markets__c</fullName>
    <description>How many Contacts on this Account have a Firm Role that identifies them as PGL - Capital Markets?</description>
    <inlineHelpText>How many Contacts on this Account have a Firm Role that identifies them as PGL - Capital Markets?</inlineHelpText>
    <label>Contacts-PGL-Capital Markets</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>