Doc/force-app/main/default/objects/Account/fields/Contacts_PGL_Corporate__c.field-meta.xml
<CustomField>
    <fullName>Contacts_PGL_Corporate__c</fullName>
    <description>How many Contacts on this Account have a Firm Role that identifies them as PGL - Corporate?</description>
    <inlineHelpText>How many Contacts on this Account have a Firm Role that identifies them as PGL - Corporate?</inlineHelpText>
    <label>Contacts-PGL-Corporate</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>