Doc/force-app/main/default/objects/Account/fields/Contacts_PGL_Litigation__c.field-meta.xml
<CustomField>
    <fullName>Contacts_PGL_Litigation__c</fullName>
    <label>Contacts - PGL - Litigation</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>