Doc/force-app/main/default/objects/Account/fields/Contacts_Pricing_Leaders__c.field-meta.xml
<CustomField>
    <fullName>Contacts_Pricing_Leaders__c</fullName>
    <description>How many Contacts on this Account have a Firm Role that identifies them as Pricing Leaders?</description>
    <inlineHelpText>How many Contacts on this Account have a Firm Role that identifies them as Pricing Leaders?</inlineHelpText>
    <label>Contacts - Pricing Leaders</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>