Doc/force-app/main/default/objects/Account/fields/Contacts_Tech_Partner__c.field-meta.xml
<CustomField>
    <fullName>Contacts_Tech_Partner__c</fullName>
    <description>How many Contacts on this Account have a Firm Role that identifies them as Tech Partner?</description>
    <inlineHelpText>How many Contacts on this Account have a Firm Role that identifies them as Tech Partner?</inlineHelpText>
    <label>Contacts - Tech Partner</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>