Doc/force-app/main/default/objects/Account/fields/Contract_Negotiation_Description__c.field-meta.xml
<CustomField>
    <fullName>Contract_Negotiation_Description__c</fullName>
    <description>This field should be used to provide details on the Contract Negotiation Value chosen on the pick list, and to list the date when Term &amp; Conditions were executed.</description>
    <inlineHelpText>This field should be used to provide details on the Contract Negotiation Value chosen on the pick list, and to list the date when Term &amp; Conditions were executed.</inlineHelpText>
    <label>Contract Negotiation Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>