Doc/force-app/main/default/objects/Account/fields/Contract_Term_Version__c.field-meta.xml
<CustomField>
    <fullName>Contract_Term_Version__c</fullName>
    <inlineHelpText>What Intapp contract terms is this account currently active on?</inlineHelpText>
    <label>Master Terms: Term Version</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>10.1.1</fullName>
            </value>
            <value>
                <fullName>10.2</fullName>
            </value>
            <value>
                <fullName>10.2.1</fullName>
            </value>
            <value>
                <fullName>10.2.2</fullName>
            </value>
            <value>
                <fullName>10.3</fullName>
            </value>
            <value>
                <fullName>10.4</fullName>
            </value>
            <value>
                <fullName>10.5</fullName>
            </value>
            <value>
                <fullName>10.6</fullName>
            </value>
            <value>
                <fullName>10.6 excluding Cloud Terms</fullName>
            </value>
            <value>
                <fullName>10.7</fullName>
            </value>
            <value>
                <fullName>10.7 excluding Cloud Terms</fullName>
            </value>
            <value>
                <fullName>10.8</fullName>
            </value>
            <value>
                <fullName>10.8 Excluding Cloud Terms</fullName>
            </value>
            <value>
                <fullName>10.9</fullName>
            </value>
            <value>
                <fullName>10.9 Excluding Cloud Terms</fullName>
            </value>
            <value>
                <fullName>11</fullName>
            </value>
            <value>
                <fullName>11 Excluding Cloud Terms</fullName>
            </value>
            <value>
                <fullName>12</fullName>
            </value>
            <value>
                <fullName>13</fullName>
            </value>
            <value>
                <fullName>14</fullName>
            </value>
            <value>
                <fullName>15</fullName>
            </value>
            <value>
                <fullName>8.5</fullName>
            </value>
            <value>
                <fullName>8.8</fullName>
            </value>
            <value>
                <fullName>8.9</fullName>
            </value>
            <value>
                <fullName>9.0</fullName>
            </value>
            <value>
                <fullName>9.1</fullName>
            </value>
            <value>
                <fullName>9.2</fullName>
            </value>
            <value>
                <fullName>9.3</fullName>
            </value>
            <value>
                <fullName>9.4</fullName>
            </value>
            <value>
                <fullName>9.4.1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>