Doc/force-app/main/default/objects/Account/fields/Could_Be_Core__c.field-meta.xml
<CustomField>
    <fullName>Could_Be_Core__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Could Be Core</label>
    <type>Checkbox</type>
</CustomField>