Doc/force-app/main/default/objects/Account/fields/CRD__c.field-meta.xml
<CustomField>
    <fullName>CRD__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Please pick the appropriate CRD for this account</description>
    <label>Account Mgr</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts1</relationshipName>
    <type>Lookup</type>
</CustomField>